RESOLVED FIXED124608
[Mac] 9 WebGL conformance failures after r159518.
https://bugs.webkit.org/show_bug.cgi?id=124608
Summary [Mac] 9 WebGL conformance failures after r159518.
Jer Noble
Reported 2013-11-19 14:43:38 PST
[Mac] 9 WebGL conformance failures after r159518.
Attachments
Patch (2.72 KB, patch)
2013-11-19 14:45 PST, Jer Noble
dino: review+
Jer Noble
Comment 1 2013-11-19 14:45:18 PST
Jer Noble
Comment 2 2013-11-19 15:04:40 PST
Note You need to log in before you can comment on or make changes to this bug.